data/derived/sp14/progs/unify/prog1123.ml.out
Characters 46-55:
  let fixpoint (f,b) = wwhile((let g x = f x in (x, x!=x)), b);;
                                                ^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
